updates to playership and bosslevel

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8" />
 	<title>Phaser Bootstrap</title>
 	<script type="text/javascript" src="../framework/phaser.min.js"></script>
-	<script type="text/javascript" src="js/test.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 	
 	<script type="text/javascript" src="js/states/Boot.js"></script>
 	<script type="text/javascript" src="js/states/Load.js"></script>
@@ -24,6 +24,6 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-	<h1>Endless Runner</h1>
+	<h1>Soul Ship</h1>
 </body>
 </html>
