gameover screen now shows up from all levels

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	<script type="text/javascript" src="js/states/Boot.js"></script>
 	<script type="text/javascript" src="js/states/Load.js"></script>
 	<script type="text/javascript" src="js/states/MainMenu.js"></script>
+  <script type="text/javascript" src="js/states/Settings.js"></script>
 	
 	<script type="text/javascript" src="js/states/Tutorial.js"></script>
 	<script type="text/javascript" src="js/states/TutorialPt1.js"></script>
 	<script type="text/javascript" src="js/states/TutorialPt2.js"></script>
-	
 	<script type="text/javascript" src="js/states/BossLevel.js"></script>
 	<script type="text/javascript" src="js/states/GameOver.js"></script>
 	
