--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 	<script type="text/javascript" src="js/states/TutorialPt2.js"></script>
 	<script type="text/javascript" src="js/states/Level1.js"></script>
 
+	<script type="text/javascript" src="js/states/Cutscene2.js"></script>
+
+
 	<script type="text/javascript" src="js/states/BossLevel.js"></script>
 	<script type="text/javascript" src="js/states/GameOver.js"></script>
 	
