--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<script type="text/javascript" src="js/states/TutorialPt2.js"></script>
 	<script type="text/javascript" src="js/states/Level1.js"></script>
 
+	<script type="text/javascript" src="js/states/Cutscene1.js"></script>
 	<script type="text/javascript" src="js/states/Cutscene2.js"></script>
 
 
