new title, credits added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<script type="text/javascript" src="js/states/Load.js"></script>
 	<script type="text/javascript" src="js/states/MainMenu.js"></script>
   <script type="text/javascript" src="js/states/Settings.js"></script>
-	
+	<script type="text/javascript" src="js/states/Credits.js"></script>
+
 	<script type="text/javascript" src="js/states/Tutorial.js"></script>
 	<script type="text/javascript" src="js/states/TutorialPt1.js"></script>
 	<script type="text/javascript" src="js/states/TutorialPt2.js"></script>
