--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 	<script type="text/javascript" src="js/states/Cutscene1.js"></script>
 	<script type="text/javascript" src="js/states/Cutscene2.js"></script>
+	<script type="text/javascript" src="js/states/Cutscene3.js"></script>
 
 
 	<script type="text/javascript" src="js/states/BossLevel.js"></script>
