--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
 	<script type="text/javascript" src="js/prefabs/HpBar.js"></script>
 	
-	
+	<script>function handleMouseDown(event) {window.focus();}
+					window.onclick = function () { window.focus(); }</script>  <!-- source: https://github.com/itchio/itch.io/issues/388 --> 
 	
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
